2015-04-25  Barton E. Schaefer  <schaefer@zsh.org>

	* 34961: Src/hist.c: clean up decl's of quote() and quotebreak()

	* 34961: Doc/Zsh/mod_system.yo: sysparams[pid] and sysparams[ppid]
	added to variables index

	* 34961: Src/compat.c, Src/init.c: replace a couple of free() with
	zfree() for consistency.

	* 34961: Completion/Base/Completer/_expand: add backslash to alias
	expansion matching (related to workers/32186)

	* 34961: Test/D02glob.ztst: test for breadth-first glob with (Y1)
	qualifier (originally workers/32726)

2015-04-24  Peter Stephenson  <p.stephenson@samsung.com>

	* 34955: Src/exec.c: list_pipe_job needs saving and restoring
	with some other similar variables in execlist() in order
	to stop source() messing up job control.

2015-04-24  Mikael Magnusson  <mikachu@gmail.com>

	* Oliver: 34940: Completion/Zsh/Command/_fc: fix typo breaking
	completion for history

2015-04-17  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34921: Src/parse.c: handle error in recursive par_event().

2015-04-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 34920: Etc/zsh-development-guide: info on git pull.

2015-04-17  Daniel Hahler  <git@thequod.de>

	* 34899: Completion/Unix/Command/_vim: completion: _vim: add
	nvim to #compdef

2015-04-17  Peter Stephenson  <p.stephenson@samsung.com>

	* 34919: Src/Zle/zle_hist.c, Src/Zle/zle_misc.c: similar cases
	with send-break and push-input.

	* 34905: Src/Zle/zle_keymap.c, Src/lex.c, Src/parse.c: suppress
	parse errors resulting from keyboard interruption.

2015-04-16  Mikael Magnusson  <mikachu@gmail.com>

	* 34902: Doc/Zsh/compsys.yo, Doc/Zsh/contrib.yo, Doc/Zsh/zle.yo:
	explain the numeric argument and be consistent about what we
	call it.

2015-04-15  Peter Stephenson  <p.w.stephenson@ntlworld.com>

	* 34901: Test/A04redirect.ztst: Test for the foregoing.

	* 34900: Src/exec.c: assignment before an "exec" with
	a redirection, with and without POSIXBUILTINS.
