@@ -1,5 +1,8 @@
 2015-04-25  Barton E. Schaefer  <schaefer@zsh.org>
 
+	* 34961: Src/Modules/datetime.c: $TZ is implicitly local in
+	builtin strftime (originally workers/34602 from workers/34596)
+
 	* 34961: Src/hist.c: clean up decl's of quote() and quotebreak()
 
 	* 34961: Doc/Zsh/mod_system.yo: sysparams[pid] and sysparams[ppid]
